# ip2as

./: BUILD.bazel  WORKSPACE  go.mod  ip2as.proto
cmd/ip2as/: BUILD.bazel  main.go
pkg/mrt/: reader.go  reader_test.go
pkg/route/: route.go
