load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/f110/ip2as

gazelle(name = "gazelle")

proto_library(
    name = "ip2as_proto",
    srcs = ["ip2as.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "ip2as_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/f110/ip2as",
    proto = ":ip2as_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":ip2as_go_proto"],
    importpath = "github.com/f110/ip2as",
    visibility = ["//visibility:public"],
)
