load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/f110/ip2as/cmd/ip2as",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "ip2as",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
